:bug::iphone: fix 100vh bug on mobile. Intro background position jumb

--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -14,6 +14,11 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+
+        @include medium {
+            top: 0;
+            transform: translateX(-50%);
+        }
     }
 
     &__title {
